Fixed squashed logos

--- a/css/app.css
+++ b/css/app.css
@@ -613,8 +613,6 @@ img.partner-logo {
 img.press-logo {
   bottom: 0;
   display: block;
-  max-width: 200px;
-  min-width: 50px;
   margin: auto auto 10px auto;
   text-align: center;
   height: 80px; }
