--- a/css/sass/components.scss
+++ b/css/sass/components.scss
@@ -360,8 +360,6 @@ img.partner-logo {
 img.press-logo {
   bottom: 0;
   display: block;
-  max-width: 200px;
-  min-width: 50px;
   margin: auto auto 10px auto;
   text-align: center;
   height: 80px;
